# evolution-data-server

./: .cvsignore  .dir-locals.el  .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  MAINTAINERS  Makefile.am  NEWS  TODO  acinclude.m4  autogen.sh  config.h.in  configure.ac  configure.in  evolution-data-server-1.0.pc.in  evolution-data-server-zip.in  evolution-data-server.doap  evolution-data-server.pc.in  iconv-detect.c  marshal.mk
addressbook/backends/: Makefile.am
addressbook/libebook-contacts/: CMakeLists.txt  Makefile.am  e-address-western.c  e-address-western.h  (+26 more)
art/: CMakeLists.txt  Makefile.am
camel/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.am  README  README.COPYRIGHT  broken-date-parser.c  broken-date-parser.h  camel-address.c  camel-address.h  camel-arg.c  camel-arg.h  camel-async-closure.c  camel-async-closure.h  camel-block-file.c  camel-block-file.h  camel-certdb.c  camel-certdb.h  camel-charset-map-private.h  camel-charset-map.c  camel-charset-map.h  camel-cipher-context.c  camel-cipher-context.h  camel-data-cache.c  camel-data-cache.h  camel-data-wrapper.c  camel-data-wrapper.h  camel-db.c  camel-db.h  camel-debug.c  camel-debug.h  camel-digest-folder.c  camel-digest-folder.h  camel-digest-store.c  camel-digest-store.h  camel-digest-summary.c  camel-digest-summary.h  camel-disco-diary.c  camel-disco-diary.h  camel-disco-folder.c  (+296 more)
data/: CMakeLists.txt  Makefile.am  org.gnome.Evolution-alarm-notify.desktop.in.in  org.gnome.Evolution.DefaultSources.gschema.xml  org.gnome.EvolutionDataServer.Devel.json  org.gnome.EvolutionDataServer.json  org.gnome.evolution-data-server.OAuth2-handler.desktop.in  org.gnome.evolution-data-server.addressbook.gschema.xml.in  org.gnome.evolution-data-server.calendar.gschema.xml.in  org.gnome.evolution-data-server.gschema.xml.in  org.gnome.evolution-data-server.nightly.json  org.gnome.evolution.eds-shell.gschema.xml.in  org.gnome.evolution.shell.network-config.gschema.xml.in
docs/: CMakeLists.txt  Makefile.am  camel.toml.in  index.html  libebackend.toml.in  libebook-contacts.toml.in  libebook.toml.in  libecal.toml.in  libedata-book.toml.in  libedata-cal.toml.in  libedataserver.toml.in  libedataserverui.toml.in  libedataserverui4.toml.in
libebackend/: CMakeLists.txt  Makefile.am  e-authentication-mediator.c  e-authentication-mediator.h  e-authentication-session.c  e-authentication-session.h  e-backend-enums.h  e-backend-enumtypes.c.template  e-backend-enumtypes.h.template  e-backend-factory.c  e-backend-factory.h  e-backend.c  e-backend.h  e-cache-reaper.c  e-collection-backend-factory.c  e-collection-backend-factory.h  e-collection-backend.c  e-collection-backend.h  e-data-factory.c  e-data-factory.h  e-data-server-module.c  e-data-server-module.h  e-db3-utils.c  e-db3-utils.h  e-dbhash.c  e-dbhash.h  e-dbus-server.c  e-dbus-server.h  e-extensible.c  e-extensible.h  e-extension.c  e-extension.h  e-file-cache.c  e-file-cache.h  e-module.c  e-module.h  e-oauth2-support.c  e-oauth2-support.h  e-offline-listener.c  e-offline-listener.h  (+22 more)
libedataserver/: .cvsignore  CMakeLists.txt  Makefile.am  e-account-list.c  e-account-list.h  e-account.c  e-account.h  e-alphabet-index-private.cpp  e-alphabet-index-private.h  e-cache.c  e-cache.h  e-cancellable-locks.c  e-cancellable-locks.h  e-categories.c  e-categories.h  e-client-private.h  e-client.c  e-client.h  e-collator.c  e-collator.h  e-component-listener.c  e-component-listener.h  e-credentials.c  e-credentials.h  e-data-server-marshal.c  e-data-server-marshal.h  e-data-server-marshal.list  e-data-server-module.c  e-data-server-module.h  e-data-server-util.c  e-data-server-util.h  e-db3-utils.c  e-db3-utils.h  e-dbhash.c  e-dbhash.h  e-debug-log.c  e-debug-log.h  e-extensible.c  e-extension.c  e-file-cache.c  (+157 more)
libedataserverui/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.am  e-book-auth-util.c  e-book-auth-util.h  e-categories-dialog.c  e-categories-dialog.glade  e-categories-dialog.h  e-categories-dialog.ui  e-categories-editor.c  e-categories-editor.h  e-categories-selector.c  e-categories-selector.h  e-category-completion.c  e-category-completion.h  e-category-editor.c  e-category-editor.h  e-cell-renderer-color.c  e-cell-renderer-color.h  e-client-utils.c  e-client-utils.h  e-contact-store.c  e-contact-store.h  e-credentials-prompter-impl-google.c  e-credentials-prompter-impl-password.c  e-credentials-prompter-impl-password.h  e-credentials-prompter-impl.c  e-credentials-prompter-impl.h  e-credentials-prompter.c  e-credentials-prompter.h  e-data-server-ui-marshal.list  e-destination-store.c  e-destination-store.h  e-name-selector-dialog.c  e-name-selector-dialog.glade  e-name-selector-dialog.h  e-name-selector-dialog.ui  e-name-selector-entry.c  e-name-selector-entry.h  (+30 more)
modules/: CMakeLists.txt  Makefile.am
private/: CMakeLists.txt  Makefile.am  org.freedesktop.locale1.xml  org.gnome.evolution.dataserver.AddressBook.xml  org.gnome.evolution.dataserver.AddressBookCursor.xml  org.gnome.evolution.dataserver.AddressBookFactory.xml  org.gnome.evolution.dataserver.Authenticator.xml  org.gnome.evolution.dataserver.Calendar.xml  org.gnome.evolution.dataserver.CalendarFactory.xml  org.gnome.evolution.dataserver.Source.xml  org.gnome.evolution.dataserver.SourceManager.xml  org.gnome.evolution.dataserver.Subprocess.Backend.xml  org.gnome.evolution.dataserver.UserPrompter.xml
src/: .cvsignore  CMakeLists.txt  Evolution-DataServer.idl  GNOME_Evolution_DataServer.server.in.in  GNOME_Evolution_DataServerLDAP.server.in.in  GNOME_Evolution_DataServerNOLDAP.server.in.in  GNOME_Evolution_WombatNOLDAP.server.in.in  Makefile.am  offline-listener.c  offline-listener.h  server-interface-check.c  server-interface-check.h  server-logging.c  server-logging.h  server.c
tests/: CMakeLists.txt  Makefile.am  Makefile.gtester  test_invariant_e-book-backend-ldap.py
vala/: CMakeLists.txt  Camel-1.2.metadata  EBook-1.2.metadata  EBookContacts-1.2.metadata  ECalendar-1.2.metadata  EDataServer-1.2.metadata  Makefile.am  libedataserver-1.2.deps
win32/: Makefile.am  README  libedataserverui.def
(+4958 files in other folders)
